# sorts

./: CMakeLists.txt  bubblesort.c  bubblesort.h  insertsort.c  insertsort.h  main.c  mergesort.c  mergesort.h  picksort.c  picksort.h  quicksort.c  quicksort.h  sorts.c  sorts.h
